--- a/algorithm/动态规划/不同的子序列.md
+++ b/algorithm/动态规划/不同的子序列.md
@@ -16,9 +16,9 @@
 
 但如果 s[0] 可以匹配 t[0],那么又有两种情况,这两种情况是累加的关系: 
 
-1、让 s[0] 匹配 t[0],那么原问题转化为让 s[1..] 去匹配 t[1..]. 
+1, 让 s[0] 匹配 t[0],那么原问题转化为让 s[1..] 去匹配 t[1..]. 
 
-2、不让 s[0] 匹配 t[0],那么原问题转化为让 s[1..] 去匹配 t[0..]. 
+2, 不让 s[0] 匹配 t[0],那么原问题转化为让 s[1..] 去匹配 t[0..]. 
 
 比如 s = "aab", t = "ab",就有两种匹配方式: a_b 和 _ab. 
 总的时间复杂度就是 O(MN). 
