--- a/algorithm/数学运算/一行代码解决的算法题.md
+++ b/algorithm/数学运算/一行代码解决的算法题.md
@@ -45,7 +45,7 @@ leetcode877
 
 因为题目有两个条件很重要: 一是石头总共有偶数堆,石头的总数是奇数. 
 
-如果我们把这四堆石头按索引的奇偶分为两组,即第 1、3 堆和第 2、4 堆,那么这两组石头的数量一定不同,也就是说一堆多一堆少. 因为石头的总数是奇数,不能被平分. 
+如果我们把这四堆石头按索引的奇偶分为两组,即第 1, 3 堆和第 2, 4 堆,那么这两组石头的数量一定不同,也就是说一堆多一堆少. 因为石头的总数是奇数,不能被平分. 
 
 而作为第一个拿石头的人,你可以控制自己拿到所有偶数堆,或者所有的奇数堆. 
 
@@ -81,7 +81,7 @@ var stoneGame = function(piles) {
 
 我们假设只有 6 盏灯,而且我们只看第 6 盏灯. 需要进行 6 轮操作对吧,请问对于第 6 盏灯,会被按下几次开关呢?这不难得出,第 1 轮会被按,第 2 轮,第 3 轮,第 6 轮都会被按. 
 
-为什么第 1、2、3、6 轮会被按呢?因为 6=1*6=2*3. 一般情况下,因子都是成对出现的,也就是说开关被按的次数一般是偶数次. 但是有特殊情况,比如说总共有 16 盏灯,那么第 16 盏灯会被按几次?
+为什么第 1, 2, 3, 6 轮会被按呢?因为 6=1*6=2*3. 一般情况下,因子都是成对出现的,也就是说开关被按的次数一般是偶数次. 但是有特殊情况,比如说总共有 16 盏灯,那么第 16 盏灯会被按几次?
 
 16 = 1*16 = 2*8 = 4*4
 
@@ -89,7 +89,7 @@ var stoneGame = function(piles) {
 
 不过,我们不是要算最后有几盏灯亮着吗,这样直接平方根一下是啥意思呢?稍微思考一下就能理解了. 
 
-就假设现在总共有 16 盏灯,我们求 16 的平方根,等于 4,这就说明最后会有 4 盏灯亮着,它们分别是第 1*1=1 盏、第 2*2=4 盏、第 3*3=9 盏和第 4*4=16 盏. 
+就假设现在总共有 16 盏灯,我们求 16 的平方根,等于 4,这就说明最后会有 4 盏灯亮着,它们分别是第 1*1=1 盏, 第 2*2=4 盏, 第 3*3=9 盏和第 4*4=16 盏. 
 
 就算有的 n 平方根结果是小数,强转成 int 型,也相当于一个最大整数上界,比这个上界小的所有整数,平方后的索引都是最后亮着的灯的索引. 所以说我们直接把平方根转成整数,就是这个问题的答案. 
 
