--- a/algorithm/数学运算/丑数.md
+++ b/algorithm/数学运算/丑数.md
@@ -1,6 +1,6 @@
-把只包含质因子2、3和5的数称作丑数(Ugly Number). 
+把只包含质因子2, 3和5的数称作丑数(Ugly Number). 
 
-例如6、8都是丑数,但14不是,因为它包含质因子7. 
+例如6, 8都是丑数,但14不是,因为它包含质因子7. 
 
 习惯上我们把1当做是第一个丑数. 求按从小到大的顺序的第N个丑数. 
 
@@ -11,7 +11,7 @@ function getUglyNum(n) {
   if (n <= 0) return 0
   //  丑数集合,第一个丑数为1
   const dp = [1]
-  //  设三个指针 p2、p3 和 p5 分别指向当前丑数序列中乘以 2、3 和 5 后大于当前最大丑数的位置
+  //  设三个指针 p2, p3 和 p5 分别指向当前丑数序列中乘以 2, 3 和 5 后大于当前最大丑数的位置
   let p2 = 0, p3 = 0, p5 = 0
   //  p2: 乘以 2 后大于当前最大丑数的最小位置. 
   for (let i=1; i<n; i++) {
