--- a/algorithm/数学运算/二进制中1的个数.md
+++ b/algorithm/数学运算/二进制中1的个数.md
@@ -137,7 +137,7 @@ parseInt(string, radix);
 - radix 小于 2 或大于 36, 或
 - 第一个非空格字符不能转换为数字. 
 
-如果 radix 是 undefined、0 或未指定的, JavaScript 会假定以下情况: 
+如果 radix 是 undefined, 0 或未指定的, JavaScript 会假定以下情况: 
 
 1. 如果输入的 string 以 0x 或 0X(一个 0, 后面是小写或大写的 X)开头, 那么 radix 被假定为 16, 字符串的其余部分被当做十六进制数去解析. 
 
