--- a/algorithm/算法.md
+++ b/algorithm/算法.md
@@ -49,7 +49,7 @@
 ### 查找
 
 查找-概览
-> 二分查找维护查找空间的左、右和中间指示符,并比较查找目标或将查找条件应用于集合的中间值[适用排序数组]
+> 二分查找维护查找空间的左, 右和中间指示符,并比较查找目标或将查找条件应用于集合的中间值[适用排序数组]
 
 - [二维数组查找⭐⭐](./查找/二维数组查找.md)
 - [旋转数组的最小数字](./查找/旋转数组的最小数字.md)
@@ -151,9 +151,9 @@
 
 顺便强调下,「算法工程师」做的这个「算法」,和「数据结构与算法」中的这个「算法」完全是两码事,免得一些初学同学误解. 
 
-对前者来说,重点在数学建模和调参经验,计算机真就只是拿来做计算的工具而已; 而后者的重点是计算机思维,需要你能够站在计算机的视角,抽象、化简实际问题,然后用合理的数据结构去解决问题. 
+对前者来说,重点在数学建模和调参经验,计算机真就只是拿来做计算的工具而已; 而后者的重点是计算机思维,需要你能够站在计算机的视角,抽象, 化简实际问题,然后用合理的数据结构去解决问题. 
 
 不妨称算法工程师研究的算法为「数学算法」,称刷题面试的算法为「计算机算法」,我写的内容主要聚焦的是「计算机算法」. 
 
-穷举有两个关键难点: 无遗漏、无冗余. 
+穷举有两个关键难点: 无遗漏, 无冗余. 
 
