--- a/dataStructure/图.md
+++ b/dataStructure/图.md
@@ -10,7 +10,7 @@
 
 图的另一种存储方式是 2-"邻接表". 邻接表中每个顶点对应一条链表,指向该顶点所指向的顶点. 这样表中就没有了没有关系的顶点,节省了储存空间. 但是相对的,查询相邻的顶点也就比较耗时. 
 
-邻接表 - 可以使用一个数组或者 HashMap 来建立一个邻接表,它存储这所有的顶点. 每个顶点都有一个列表(可以是数组、链表、集合等数据结构),存放着与其相邻的顶点. 
+邻接表 - 可以使用一个数组或者 HashMap 来建立一个邻接表,它存储这所有的顶点. 每个顶点都有一个列表(可以是数组, 链表, 集合等数据结构),存放着与其相邻的顶点. 
 
 //  最简单的实现方式之一是使用 HashMap
 ```js
