--- a/dataStructure/堆/堆的基本操作.md
+++ b/dataStructure/堆/堆的基本操作.md
@@ -1,4 +1,4 @@
-大顶堆  是一种二叉树结构,其中每个节点的值都大于或等于其左右子节点的值. 在 JavaScript 中,可以使用`数组来表示二叉堆`,其中下标为 i 的节点的左、右子节点分别为 `2i+1` 和 `2i+2`
+大顶堆  是一种二叉树结构,其中每个节点的值都大于或等于其左右子节点的值. 在 JavaScript 中,可以使用`数组来表示二叉堆`,其中下标为 i 的节点的左, 右子节点分别为 `2i+1` 和 `2i+2`
 
 ```js
 /**
