--- a/dataStructure/复杂度分析.md
+++ b/dataStructure/复杂度分析.md
@@ -73,7 +73,7 @@ function fibonacci(n) {
 算法 C 中的打印操作需要循环 \(1000000\) 次,虽然运行时间很长,但它与输入数据大小 \(n\) 无关. 因此 C 的时间复杂度和 A 相同,仍为"常数阶". 
 
 1- 忽略 \(T(n)\) 中的常数项. 因为它们都与 \(n\) 无关,所以对时间复杂度不产生影响. <br>
-2- 省略所有系数. 例如,循环 \(2n\) 次、\(5n + 1\) 次等,都可以简化记为 \(n\) 次,因为 \(n\) 前面的系数对时间复杂度没有影响. <br>
+2- 省略所有系数. 例如,循环 \(2n\) 次, \(5n + 1\) 次等,都可以简化记为 \(n\) 次,因为 \(n\) 前面的系数对时间复杂度没有影响. <br>
 3- 循环嵌套时使用乘法. 总操作数量等于外层循环和内层循环操作数量之积,每一层循环依然可以分别套用第 1. 点和第 2. 点的技巧. 
 
 时间复杂度由多项式 \(T(n)\) 中最高阶的项来决定. 这是因为在 \(n\) 趋于无穷大时,最高阶的项将发挥主导作用,其他项的影响都可以被忽略. 
@@ -128,7 +128,7 @@ O(1) < O(log n) < O(n) < O(n log n) < O(n^2) < O(2^n) < O(n!)
 用于衡量算法占用内存空间随着数据量变大时的增长趋势. 
 
 输入空间: 用于存储算法的输入数据. <br>
-*暂存空间: 用于存储算法在运行过程中的变量、对象、函数上下文等数据. <br>
+*暂存空间: 用于存储算法在运行过程中的变量, 对象, 函数上下文等数据. <br>
 *输出空间: 用于存储算法的输出数据. 
 
 空间复杂度的统计范围是"暂存空间"加上"输出空间". 
@@ -144,7 +144,7 @@ O(1) < O(log n) < O(n) < O(n^2) < O(2^n)
 
 常数阶: 在循环中初始化变量或调用函数而占用的内存,在进入下一循环后就会被释放,因此不会累积占用空间,空间复杂度仍为 (O(1)) 
 
-线性阶 (O(n)): 线性阶常见于元素数量与 \(n\) 成正比的数组、链表、栈、队列; 递归函数产生的线性阶空间复杂度
+线性阶 (O(n)): 线性阶常见于元素数量与 \(n\) 成正比的数组, 链表, 栈, 队列; 递归函数产生的线性阶空间复杂度
 
 平方阶 \(O(n^2)\): 平方阶常见于矩阵和图,元素数量与 \(n\) 成平方关系
 
