--- a/dataStructure/字典和集合.md
+++ b/dataStructure/字典和集合.md
@@ -52,7 +52,7 @@ WeakMap WeakSet 类几乎和 Map Set 类一样,只有以下少许不同:
 - **只能用对象作为键**
 - **键是弱引用类型的**
 
-WeakMap WeakSet 没有遍历器,所以不能调用 `keys()、values()、entries()方法`,也没有 `size` 属性和 `clear()` 方法
+WeakMap WeakSet 没有遍历器,所以不能调用 `keys(), values(), entries()方法`,也没有 `size` 属性和 `clear()` 方法
 
 WeakMap
 只接受对象作为键名(null除外),不接受其他类型的值作为键名
