--- a/dataStructure/字符串/表示数值的字符串.md
+++ b/dataStructure/字符串/表示数值的字符串.md
@@ -10,8 +10,8 @@
 ## 思路
 考虑完全所有情况
 
-1. 只能出现数字、符号位、小数点、指数位
-2. 小数点,指数符号只能出现一次、且不能出现在开头结尾
+1. 只能出现数字, 符号位, 小数点, 指数位
+2. 小数点,指数符号只能出现一次, 且不能出现在开头结尾
 3. 指数位出现后,小数点不允许在出现
 4. 符号位只能出现在开头和指数位后面 【边界条件 - '+'】
 
