--- a/dataStructure/数组/字节+剑指-顺时针打印矩阵.md
+++ b/dataStructure/数组/字节+剑指-顺时针打印矩阵.md
@@ -29,7 +29,7 @@
 - 第三步: 从右到左打印一行
 - 第四步: 从下到上打印一列
 
-最后一圈很有可能出现几种异常情况,打印矩阵最里面一圈可能只需三步、两步、甚至一步
+最后一圈很有可能出现几种异常情况,打印矩阵最里面一圈可能只需三步, 两步, 甚至一步
 
 ![Alt text](../../images/image-8.png)
 
