--- a/algorithm/动态规划/买卖股票的最佳时机.md
+++ b/algorithm/动态规划/买卖股票的最佳时机.md
@@ -7,7 +7,7 @@
 返回你可以从这笔交易中获取的最大利润. 如果你不能获取任何利润,返回 0 . 
 
 ## 思路
-每天都有三种「选择」: 买入、卖出、无操作,我们用 buy, sell, rest 表示这三种选择. 
+每天都有三种「选择」: 买入, 卖出, 无操作,我们用 buy, sell, rest 表示这三种选择. 
 
 这个问题的「状态」有三个,第一个是天数,第二个是允许交易的最大次数,第三个是当前的持有状态(即之前说的 rest 的状态,我们不妨用 1 表示持有,0 表示没有持有)
 
