--- a/algorithm/动态规划/动态规划.md
+++ b/algorithm/动态规划/动态规划.md
@@ -42,7 +42,7 @@ for 状态1 in 状态1的所有取值:
 
 > 首先,虽然动态规划的核心思想就是穷举求最值,但是问题可以千变万化,穷举所有可行解其实并不是一件容易的事,需要你熟练掌握递归思维,只有列出正确的「状态转移方程」,才能正确地穷举. 而且,你需要判断算法问题是否具备「最优子结构」,是否能够通过子问题的最值得到原问题的最值. 另外,动态规划问题存在「重叠子问题」,如果暴力穷举的话效率会很低,所以需要你使用「备忘录」或者「DP table」来优化穷举过程,避免不必要的计算. 
 
-以上提到的`重叠子问题、最优子结构、状态转移方程`就是动态规划三要素. 
+以上提到的`重叠子问题, 最优子结构, 状态转移方程`就是动态规划三要素. 
 
 ```
 重叠子问题(Overlapping Subproblems): 指的是在解决一个大问题的过程中,会反复遇到相同的小问题. 动态规划通过保存已经解决过的子问题的解,避免重复计算,从而提高效率. 
@@ -201,9 +201,9 @@ O(n^2)
 ### 总结
 如何找到动态规划的状态转移关系: 
 
-1、明确 dp 数组的定义. 这一步对于任何动态规划问题都很重要,如果不得当或者不够清晰,会阻碍之后的步骤. 
+1, 明确 dp 数组的定义. 这一步对于任何动态规划问题都很重要,如果不得当或者不够清晰,会阻碍之后的步骤. 
 
-2、根据 dp 数组的定义,运用数学归纳法的思想,假设 dp[0...i-1] 都已知,想办法求出 dp[i],一旦这一步完成,整个题目基本就解决了. 
+2, 根据 dp 数组的定义,运用数学归纳法的思想,假设 dp[0...i-1] 都已知,想办法求出 dp[i],一旦这一步完成,整个题目基本就解决了. 
 
 但如果无法完成这一步,很可能就是 dp 数组的定义不够恰当,需要重新定义 dp 数组的含义; 或者可能是 dp 数组存储的信息还不够,不足以推出下一步的答案,需要把 dp 数组扩大成二维数组甚至三维数组. 
 
@@ -217,9 +217,9 @@ O(n^2)
 
 dp 数组的遍历方向
 
-1、遍历的过程中,所需的状态必须是已经计算出来的. 
+1, 遍历的过程中,所需的状态必须是已经计算出来的. 
 
-2、遍历结束后,存储结果的那个位置必须已经被计算出来. 
+2, 遍历结束后,存储结果的那个位置必须已经被计算出来. 
 
 
 ## 下降路径最小和
