--- a/algorithm/动态规划/最长回文子序列.md
+++ b/algorithm/动态规划/最长回文子序列.md
@@ -6,13 +6,13 @@
 
 子序列问题是常见的算法问题,而且并不好解决. 
 
-首先,子序列问题本身就相对子串、子数组更困难一些,因为前者是不连续的序列,而后两者是连续的,就算穷举你都不一定会,更别说求解相关的算法问题了. 
+首先,子序列问题本身就相对子串, 子数组更困难一些,因为前者是不连续的序列,而后两者是连续的,就算穷举你都不一定会,更别说求解相关的算法问题了. 
 
 子序列问题很可能涉及到两个字符串,比如前文「最长公共子序列」
 
 一般来说,这类问题都是让你求一个最长子序列,因为最短子序列就是一个字符嘛,没啥可问的. 一旦涉及到子序列和最值,那几乎可以肯定,考察的是动态规划技巧,时间复杂度一般都是 O(n^2). 
 
-1、第一种思路模板是一个一维的 dp 数组: 
+1, 第一种思路模板是一个一维的 dp 数组: 
 ```js
 int n = array.length;
 int[] dp = new int[n];
@@ -28,7 +28,7 @@ for (int i = 1; i < n; i++) {
 
 在子数组 array[0..i] 中,我们要求的子序列(最长递增子序列)的长度是 dp[i]. 
 
-2、第二种思路模板是一个二维的 dp 数组: 
+2, 第二种思路模板是一个二维的 dp 数组: 
 ```js
 int n = arr.length;
 int[][] dp = new dp[n][n];
