--- a/algorithm/回溯/回溯.md
+++ b/algorithm/回溯/回溯.md
@@ -13,11 +13,11 @@ https://labuladong.online/algo/di-san-zha-24031/bao-li-sou-96f79/hui-su-sua-c26d
 
 站在回溯树的一个节点上,你只需要思考 3 个问题: 
 
-1、路径: 也就是已经做出的选择. 
+1, 路径: 也就是已经做出的选择. 
 
-2、选择列表: 也就是你当前可以做的选择. 
+2, 选择列表: 也就是你当前可以做的选择. 
 
-3、结束条件: 也就是到达决策树底层,无法再做选择的条件. 
+3, 结束条件: 也就是到达决策树底层,无法再做选择的条件. 
 
 只要从根遍历这棵树,记录路径上的数字,其实就是所有的全排列. 我们不妨把这棵树称为回溯算法的「决策树」. 
 
@@ -64,15 +64,15 @@ function backtrack(路径, 选择列表) {
 ## 回溯算法秒杀所有排列组合
 https://labuladong.online/algo/di-san-zha-24031/bao-li-sou-96f79/hui-su-sua-56e11/
 
-无论是排列、组合还是子集问题,简单说无非就是让你从序列 nums 中以给定规则取若干元素,主要有以下几种变体: 
+无论是排列, 组合还是子集问题,简单说无非就是让你从序列 nums 中以给定规则取若干元素,主要有以下几种变体: 
 
-- 形式一、元素无重不可复选,即 nums 中的元素都是唯一的,每个元素最多只能被使用一次,这也是最基本的形式. 
+- 形式一, 元素无重不可复选,即 nums 中的元素都是唯一的,每个元素最多只能被使用一次,这也是最基本的形式. 
 以组合为例,如果输入 nums = [2,3,6,7],和为 7 的组合应该只有 [7]. 
 
-- 形式二、元素可重不可复选,即 nums 中的元素可以存在重复,每个元素最多只能被使用一次. 
+- 形式二, 元素可重不可复选,即 nums 中的元素可以存在重复,每个元素最多只能被使用一次. 
 以组合为例,如果输入 nums = [2,5,2,1,2],和为 7 的组合应该有两种 [2,2,2,1] 和 [5,2]. 
 
-- 形式三、元素无重可复选,即 nums 中的元素都是唯一的,每个元素可以被使用若干次. 
+- 形式三, 元素无重可复选,即 nums 中的元素都是唯一的,每个元素可以被使用若干次. 
 以组合为例,如果输入 nums = [2,3,6,7],和为 7 的组合应该有两种 [2,2,3] 和 [7]. 
 
 当然,也可以说有第四种形式,即元素可重可复选. 但既然元素可复选,那又何必存在重复元素呢?元素去重之后就等同于形式三,所以这种情况不用考虑. 
@@ -395,7 +395,7 @@ var permuteRepeat = function(nums) {
 
 ## 总结
 
-### 形式一、元素无重不可复选
+### 形式一, 元素无重不可复选
 即 nums 中的元素都是唯一的,每个元素最多只能被使用一次,backtrack 核心代码如下: 
 
 ```js
@@ -433,7 +433,7 @@ var backtrack = function(nums) {
 
 ```
 
-### 形式二、元素可重不可复选
+### 形式二, 元素可重不可复选
 即 nums 中的元素可以存在重复,每个元素最多只能被使用一次,其关键在于排序和剪枝,backtrack 核心代码如下: 
 
 ```js
@@ -469,7 +469,7 @@ var backtrack = (nums, start, track, used) => {
 ```
 
 
-### 形式三、元素无重可复选
+### 形式三, 元素无重可复选
 即 nums 中的元素都是唯一的,每个元素可以被使用若干次,只要删掉去重逻辑即可,backtrack 核心代码如下: 
 
 
