--- a/dataStructure/二叉树.md
+++ b/dataStructure/二叉树.md
@@ -1,4 +1,4 @@
-树是用来模拟具有树状结构性质的数据集合. 根据它的特性可以分为非常多的种类,对于我们来讲,掌握`二叉树`这种结构就足够了,它也是树`最简单、应用最广泛`的种类. 
+树是用来模拟具有树状结构性质的数据集合. 根据它的特性可以分为非常多的种类,对于我们来讲,掌握`二叉树`这种结构就足够了,它也是树`最简单, 应用最广泛`的种类. 
 
 > 二叉树是一种典型的树树状结构. 如它名字所描述的那样,二叉树是每个节点`最多有两个子树`的树结构,通常子树被称作"左子树"和"右子树". 
 
@@ -28,9 +28,9 @@ BST具有以下特性:
 
 - 若任意节点的右子树不为空,则右子树上所有结点的值均大于它的根结点的值: 这表示在二叉搜索树中,每个节点的右子树中的所有节点的值都要大于该节点的值. 
 
-- 任意节点的左、右子树也分别为二叉查找树: 这表示在二叉搜索树中,每个节点的左子树和右子树都是一个二叉搜索树,也就是说,每个子树都满足上述两个条件. 
+- 任意节点的左, 右子树也分别为二叉查找树: 这表示在二叉搜索树中,每个节点的左子树和右子树都是一个二叉搜索树,也就是说,每个子树都满足上述两个条件. 
 
-这些特性使得二叉搜索树具有一定的`有序性`,可以通过对比节点的值来快速定位目标值. 通常,二叉搜索树被广泛应用于`数据的查找、插入和删除操作`,因为它们能够以较高效的方式组织和管理数据. 
+这些特性使得二叉搜索树具有一定的`有序性`,可以通过对比节点的值来快速定位目标值. 通常,二叉搜索树被广泛应用于`数据的查找, 插入和删除操作`,因为它们能够以较高效的方式组织和管理数据. 
 
 - [二叉搜索树的第k个节点](./二叉树/leetcode+tx-二叉搜索树的第k个节点.md)
 - [二叉搜索树的后序遍历](./二叉树/二叉搜索树的后序遍历.md)
