--- a/dataStructure/数组.md
+++ b/dataStructure/数组.md
@@ -56,4 +56,4 @@ ES6 的新增了 ArrayBuffer ,它可以创建内存空间连续的数组. 显而
 - [leetcode88: 合并两个有序数组](./数组/leetcode88: 合并两个有序数组.md)
 - [leetcode146: LRU缓存](./数组/leetcode146: LRU缓存.md)
 - [leetcode349: 两个数组的交集](./数组/leetcode349: 两个数组的交集.md)
-- [tx:数组扁平化、去重、排序](./数组/tx:数组扁平化、去重、排序.md)
+- [tx:数组扁平化, 去重, 排序](./数组/tx:数组扁平化, 去重, 排序.md)
