--- a/js/手写防抖-节流.md
+++ b/js/手写防抖-节流.md
@@ -57,7 +57,7 @@ let test = (...params) => {
 ```
 
 ### 闭包
-闭包是指一个函数可以访问其词法作用域之外的变量. 当一个函数在另一个函数内部被定义时,它就形成了一个闭包. 闭包可以捕获外部函数的变量,并且可以在其定义的作用域之外被调用和访问这些变量. 闭包可以用来保存状态、封装数据、实现私有变量等功能. 
+闭包是指一个函数可以访问其词法作用域之外的变量. 当一个函数在另一个函数内部被定义时,它就形成了一个闭包. 闭包可以捕获外部函数的变量,并且可以在其定义的作用域之外被调用和访问这些变量. 闭包可以用来保存状态, 封装数据, 实现私有变量等功能. 
 
 闭包有以下几个关键点: 
 
